# p2paudiosession

./: .actrc  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile.echo  Dockerfile.signaling  Plans.md  README.md  docker-compose.yml  package.json
.claude/: settings.json
.claude/logs/: subagent-history.jsonl
.claude/memory/: decisions.md  patterns.md
.claude/rules/: implementation-quality.md  test-quality.md
.claude/skills/code-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/sync-spec/: SKILL.md
.claude/skills/test-server-deploy/: SKILL.md
.claude/state/: harness-usage.json  plans-state.json  session-skills-used.json  test-recommendation.json
.claude/state/pending-skills/: work.pending
.github/act/: .secrets.example  event-pull-request.json  event-push-main.json  event-push-tag.json  event-workflow-dispatch.json
.github/workflows/: build.yml  ci.yml  docker-publish.yml  docs-deploy.yml  e2e-nightly.yml  e2e-pr.yml  release.yml
ansible/: ansible.cfg
ansible/group_vars/: all.yml  test.yml.example
ansible/inventory/: test.yml.example
ansible/playbooks/: site.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/docker/defaults/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/jamjam/defaults/: main.yml
ansible/roles/jamjam/handlers/: main.yml
ansible/roles/jamjam/tasks/: main.yml
ansible/roles/jamjam/templates/: docker-compose.yml.j2  env.j2
docs/: README.md  architecture.md  ci.md
docs-site/: docusaurus.config.ts  package-lock.json  sidebars.ts  sidebarsSpec.ts
docs-site/docs/: intro.md
docs-site/docs/concepts/: _category_.json  jitter-buffer.md
docs-site/docs/development/: building.md  ci.md  testing.md
docs-site/docs/getting-started/: installation.md  privacy.md  quick-start.md  troubleshooting.md
docs-spec/: README.md  architecture.md  ui-ux-guideline.md
docs-spec/adr/: ADR-001-language-rust.md  ADR-002-network-protocol.md  ADR-003-audio-codec.md  ADR-004-gui-framework.md  ADR-005-no-audio-processing.md  ADR-006-fec-strategy.md  ADR-007-i18n-library.md  ADR-008-zero-latency-mode.md  ADR-009-tauri-build-commands.md  ADR-010-e2e-test-infrastructure.md  ADR-011-core-library-architecture.md  ADR-012-code-signing-strategy.md
docs-spec/api/: audio_engine.md  echo_server.md  i18n.md  network.md  plugin.md  signaling.md
docs-spec/behavior/: audio-quality.feature  connection.feature  i18n.feature  latency.feature
docs-spec/infrastructure/: ansible-setup.md  production-environment.md  test-environment.md
docs-spec/ui/: README.md  design-tokens.md  i18n-strategy.md  personas.md  user-stories.md
docs-spec/ui/components/: README.md  connection-indicator.md
docs-spec/ui/screens/: README.md
docs/adr/: ADR-001-language-rust.md  ADR-002-network-protocol.md  ADR-003-audio-codec.md  ADR-004-gui-framework.md  ADR-005-no-audio-processing.md  ADR-006-fec-strategy.md  ADR-007-i18n-library.md
docs/api/: audio_engine.md  i18n.md  network.md  plugin.md  signaling.md
docs/behavior/: audio-quality.feature  connection.feature  i18n.feature  latency.feature
docs/deployment/: vps-setup.md
scripts/: upload-logs-to-r2.sh
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_service.rs  config.rs  lib.rs  main.rs  signaling.rs  streaming.rs
src/audio/: codec.rs  device.rs  effects.rs  engine.rs  error.rs  metronome.rs  mod.rs  plc.rs  plugin.rs  recording.rs
src/audio/plugin/: clap_host.rs  mod.rs
src/network/: connection.rs  encryption.rs  error.rs  fec.rs  jitter_buffer.rs  latency.rs  mod.rs  sequence_tracker.rs  session.rs  signaling.rs  stun.rs  transport.rs
src/protocol/: mod.rs  packet.rs
tests/: audio_quality_test.rs  connection_test.rs  dual_stack_test.rs  i18n_test.rs  latency_test.rs  signaling_e2e_test.rs
tests/e2e/: Cargo.toml
tests/e2e/docs/: SELF_HOSTED_RUNNERS.md
tests/e2e/fixtures/: .gitignore
tests/e2e/scripts/: setup-virtual-audio-linux.sh  setup-virtual-audio-macos.sh  setup-virtual-audio-windows.ps1
tests/e2e/scripts/pesq/: evaluate.py  requirements.txt
tests/e2e/src/: audio_injection.rs  lib.rs  node.rs  orchestrator.rs  quality.rs  virtual_audio.rs
tests/e2e/src/scenarios/: cross_platform.rs  eight_node.rs  loopback.rs  mod.rs  two_node.rs
tests/e2e/tests/: integration.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/.claude/logs/: subagent-history.jsonl
ui/.claude/state/: harness-usage.json
ui/locales/: en.json  ja.json
ui/src/: App.tsx  Catalog.tsx  main.ts  main.tsx  setupTests.ts  styles.css  types.ts
ui/src/components/: SessionStats.css  SessionStats.tsx
ui/src/components/Chat/: ChatPanel.css  ChatPanel.tsx  index.ts
ui/src/components/ConnectionHistory/: ConnectionHistory.css  ConnectionHistory.tsx  index.ts
ui/src/components/ConnectionIndicator/: ConnectionIndicator.css  ConnectionIndicator.test.tsx  ConnectionIndicator.tsx  icons.tsx  index.ts
ui/src/components/DeviceSelector/: DeviceSelector.css  DeviceSelector.tsx  index.ts
ui/src/components/InputLevelMeter/: InputLevelMeter.css  InputLevelMeter.tsx  index.ts
ui/src/components/Mixer/: MixerChannel.css  MixerChannel.tsx  MixerConsole.css  MixerConsole.tsx  VerticalMeter.css  VerticalMeter.tsx  index.ts
ui/src/components/MuteButton/: MuteButton.css  MuteButton.tsx  index.ts
ui/src/components/PresetRecommendation/: PresetRecommendation.css  PresetRecommendation.tsx  index.ts
ui/src/components/SidePanel/: SidePanel.css  SidePanel.tsx  index.ts
ui/src/hooks/: useTheme.ts
ui/src/i18n/: config.ts  index.ts
ui/src/lib/: errorMessages.test.ts  errorMessages.ts  presetRecommendation.test.ts  presetRecommendation.ts  tauri.ts
ui/src/screens/: MainScreen.css  MainScreen.tsx  SettingsPanel.css  SettingsPanel.tsx  SettingsScreen.css  SettingsScreen.tsx
ui/src/styles/: tokens.css
