[package]
name = "jamjam"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Low-latency P2P audio communication for musicians"
repository = "https://github.com/koedame/p2paudiosession"

[dependencies]
# Audio I/O
cpal = "0.15"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Lock-free ring buffer
ringbuf = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "jamjam"
path = "src/main.rs"
