[package]
name = "jamjam"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Low-latency P2P audio communication for musicians"
repository = "https://github.com/koedame/p2paudiosession"

[features]
default = []
opus-codec = ["dep:opus"]

# E2E testing features
e2e-loopback = []        # Audio loopback tests (no network)
e2e-network-local = []   # Local network tests (localhost)
e2e-remote = []          # Remote node tests (VPS cluster)
e2e-full = ["e2e-loopback", "e2e-network-local", "e2e-remote"]

[dependencies]
# Audio I/O
cpal = "0.15"

# Audio codec (optional, requires libopus)
opus = { version = "0.3", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Socket options (SO_REUSEADDR)
socket2 = { version = "0.5", features = ["all"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Lock-free ring buffer
ringbuf = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.8"

# WebSocket for signaling
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# TLS support
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"

# Encryption for P2P data
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
hkdf = "0.12"

# Dynamic library loading for plugins
libloading = "0.8"

# JSON for signaling messages
serde_json = "1"

# UUID for session/peer IDs
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"

# E2E testing
hound = "3.5"  # WAV file handling for audio quality tests

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "jamjam"
path = "src/main.rs"

[[bin]]
name = "signaling-server"
path = "src/bin/signaling_server.rs"
