[package]
name = "jamjam-app"
version = "0.1.0"
description = "Low-latency P2P audio communication for musicians"
authors = ["jamjam developers"]
edition = "2021"
license = "MIT"

[lib]
name = "jamjam_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core jamjam library for network functionality
jamjam = { path = ".." }
tokio = { version = "1", features = ["sync"] }

[workspace]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[lints]
workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
