[package]
name = "jamjam-app"
version = "0.1.0"
description = "Low-latency P2P audio communication for musicians"
authors = ["jamjam developers"]
edition = "2021"
license = "MIT"

[lib]
name = "jamjam_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core jamjam library for network functionality
jamjam = { path = ".." }
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

# Configuration persistence
toml = "0.8"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies for real-time thread priority
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading"] }

[workspace]

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[lints]
workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
